--- a/style.css
+++ b/style.css
@@ -2,18 +2,20 @@
 Theme Name: W3CSS Blog
 Theme URI: http://w3cssthemes.com/
 Author: W3CSS Themes
-Author URI: https://w3cssthemes.com
-Description: A W3SS Blog WordPress Theme based on W3CSS Framework
+Author URI: http://w3cssthemes.com/
+Description: A W3SS Dark Portfolio WordPress Theme based on W3CSS Framework
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: w3css-blog
+Text Domain: w3css-dark-portfolio
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-W3CSS Blog is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
+W3CSS Dark Portfolio is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
+Normalizing styles have been helped along thanks to the fine work of
+Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
